QRコード追加

--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,6 @@
 upload_max_filesize = 20M
 post_max_size = 20M
+php_value session.auto_start 0
+php_value xdebug.remote_autostart 1
+php_value xdebug.remote_host none
+php_value xdebug.remote_connect_back 1
