--- a/wp-content/themes/onepress/assets/package.json
+++ b/wp-content/themes/onepress/assets/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2"
   }
 }
