--- a/.htaccess
+++ b/.htaccess
@@ -13,22 +13,33 @@ RewriteRule . /index.php [L]
 <IfModule mod_deflate.c>
 SetOutputFilter DEFLATE
  
-#圧縮しないファイル
-SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+# gifやjpgなど圧縮済みのコンテンツは再圧縮しない
+SetEnvIfNoCase Request_URI .(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+SetEnvIfNoCase Request_URI _.utxt$ no-gzip
  
-#圧縮するファイル
+# htmlやcssなどは圧縮
 AddOutputFilterByType DEFLATE text/plain
 AddOutputFilterByType DEFLATE text/html
 AddOutputFilterByType DEFLATE text/xml
 AddOutputFilterByType DEFLATE text/css
-AddOutputFilterByType DEFLATE application/xml
 AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/xml
 AddOutputFilterByType DEFLATE application/rss+xml
 AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
+AddOutputFilterByType DEFLATE application/atom_xml
 AddOutputFilterByType DEFLATE application/x-javascript
 AddOutputFilterByType DEFLATE application/x-httpd-php
 AddOutputFilterByType DEFLATE application/x-font-ttf
 AddOutputFilterByType DEFLATE application/x-font-woff
 AddOutputFilterByType DEFLATE application/x-font-opentype
 </IfModule>
+
+<ifModule mod_expires.c>
+ExpiresActive On
+ExpiresByType image/png "access plus 1 months"
+ExpiresByType image/jpeg "access plus 1 months"
+ExpiresByType image/gif "access plus 1 months"
+ExpiresByType text/css "access plus 1 months"
+ExpiresByType text/javascript "access plus 1 months"
+</ifModule>
